--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/happy"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PiSync"
+        android:theme="@style/App.Theme.Starting"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.PiSync">
+            android:theme="@style/App.Theme.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
