--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
+    "pinia": "^3.0.1",
+    "sass": "^1.86.0",
+    "sass-loader": "^16.0.5",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
