--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,9 +1,29 @@
-.venv
-.idea
-
-# Ignore all __pycache__ folders recursively
+# Python Bytecode and Caches
 **/__pycache__/
+*.py[cod]
+*$py.class
 
-# Ignore all migration files except __init__.py
+# VSCode settings
+.vscode/
+
+# Virtual Environment
+.venv/
+venv/
+
+# Django migration files (except __init__.py)
 **/migrations/*.py
 !**/migrations/__init__.py
+
+# SQLite databases
+*.sqlite3
+*.db
+
+# Environment files
+.env
+*.env
+
+# IDE & OS files
+.idea/
+*.swp
+.DS_Store
+Thumbs.db
